--- a/II/pyproject.toml
+++ b/II/pyproject.toml
@@ -12,6 +12,8 @@ fslash = "^0.17.0"
 pampy = "^0.3.0"
 jupyter = "^1.0.0"
 numpy = "^1.24.3"
+plotnine = "^0.12.1"
+pandas = "^2.0.1"
 
 
 [build-system]
